--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 # database init, supports mysql too
 database=mysql
 #spring.datasource.url=jdbc:mysql://mysql-server:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=petclinic
 spring.datasource.password=petclinic
 spring.datasource.schema=classpath*:db/${database}/schema.sql
