--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # database init, supports mysql too
 database=mysql
+
+# Spring datasource settings
 #spring.datasource.url=jdbc:mysql://mysql-server:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=petclinic
@@ -7,8 +9,22 @@ spring.datasource.password=petclinic
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 spring.datasource.initialization-mode=never
+
+# JPA settings
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# HikariCP settings
+# Detail configurations and its description can be found here
+#        https://github.com/brettwooldridge/HikariCP
+#        https://www.baeldung.com/hikaricp
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPetclinicNativeImage
+spring.datasource.hikari.
 
 # Web
 spring.thymeleaf.mode=HTML
