add oracle and h2 databases, create a reflection config json to AOT compile Oracle JDBC driver, add includersourcebundles of oracle.net.jdbc.nl.mesg.NLSR,oracle.net.mesg.Message to resolve runtime error of petclinic native image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,51 @@
-# database init, supports mysql too
-database=mysql
+# select database to choose from, it supports H2, MySQL and Oracle (tested with Oracle 19c Enterprise)
+# values either:
+#     h2, mysql, oracle
+database=oracle
 
-# Spring datasource settings
-#spring.datasource.url=jdbc:mysql://mysql-server:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=petclinic
-spring.datasource.password=petclinic
+
+# Spring datasource settings - H2 - Uncomment below line if you are using H2
+# =====================================================================================
+#spring.datasource.url=jdbc:h2:mem:petclinic
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.username=sa
+#spring.datasource.password=password
+# To enable H2 console, uncomment below line, and then you can navigate to http://localhost:8080/h2-console
+#spring.h2.console.enabled=true
+
+
+# Spring datasource settings - MySQL - Uncomment below line if you are using MySQL
+# =====================================================================================
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.datasource.username=petclinic
+#spring.datasource.password=petclinic
+
+
+# Spring datasource and JPA settings - Oracle - Uncomment below line if you are using Oracle
+# ============================================================================================
+spring.datasource.url=jdbc:oracle:thin:@//${ORACLE_HOST:localhost}:1521/orcl
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.datasource.username=system
+spring.datasource.password=oracle
+spring.datasource.continue-on-error=true
+
+
+# Spring datasource settings - Generics
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=${DO_NOT_INITIALIZE:always}
 
-# JPA settings
+
+# JPA settings - Generics
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
 
-# HikariCP settings
+
+# Hikari connection pool settings
 # Detail configurations and its description can be found here
 #        https://github.com/brettwooldridge/HikariCP
 #        https://www.baeldung.com/hikaricp
@@ -25,23 +56,24 @@ spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=HikariPetclinicNativeImage
 
+
 # Web
 spring.thymeleaf.mode=HTML
 
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.open-in-view=false
 
 # Internationalization
 spring.messages.basename=messages/messages
 
+
 # Actuator
 management.endpoints.web.exposure.include=*
+
 
 # Logging
 logging.level.org.springframework=INFO
 # logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.context.annotation=TRACE
+
 
 # Maximum time static resources should be cached
 #spring.resources.cache.cachecontrol.max-age=12h
