--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -16,7 +16,9 @@ FROM alpine:latest
 MAINTAINER Marthen Luther <marthen.luther@oracle.com>
 
 ENV MYSQL_HOST=mysql \
-    VERSION=v0.7 \
+    VERSION=v0.8 \
+    DO_NOT_INITIALIZE=never \
+    ORACLE_HOST=oracle \
     GLIBC_REPO=https://github.com/sgerrand/alpine-pkg-glibc \
     GLIBC_VERSION=2.29-r0 \
     LANG=C.UTF-8
