--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -9,7 +9,7 @@ WORKDIR /home/app/petclinic
 RUN wget https://apachemirror.sg.wuchna.com/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz \
     && tar -xzf apache-maven-3.6.3-bin.tar.gz \
     && export PATH=$PATH:apache-maven-3.6.3/bin \
-    && ./build.sh
+    && ./compile.sh
 
 FROM alpine:latest
 
