--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install wget build-essential libz-dev zlib1g-dev -y
   - wget https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.2.0/graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
-  - tar zxf graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
-  - cd graalvm-ce-java11-20.2.0
-  - export GRAALVM_HOME=${pwd}
+  - tar zxfv graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
+  - ls -al
+#  - cd graalvm-ce-java11-20.2.0
+  - export GRAALVM_HOME=${pwd}/graalvm-ce-java11-20.2.0
   - echo $GRAALVM_HOME
   - export JAVA_HOME=$GRAALVM_HOME
   - export PATH=$PATH:$JAVA_HOME/bin
