check travis ci build failed

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ services:
 before_install:
   - sudo apt-get update
   - sudo apt-get install wget build-essential libz-dev zlib1g-dev -y
-  - wget https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.2.0/graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
-  - tar zxfv graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
+  - wget https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.2.0/graalvm-ce-java8-linux-amd64-20.2.0.tar.gz
+  - tar zxfv graalvm-ce-java8-linux-amd64-20.2.0.tar.gz
   - ls -al
-  - export GRAALVM_HOME=$TRAVIS_BUILD_DIR/graalvm-ce-java11-20.2.0
+  - export GRAALVM_HOME=$TRAVIS_BUILD_DIR/graalvm-ce-java8-20.2.0
   - echo $GRAALVM_HOME
   - export JAVA_HOME=$GRAALVM_HOME
   - export PATH=$PATH:$JAVA_HOME/bin
   - echo $PATH
   - java -version
-  - $GRAALVM_HOME/java -version
+  - $GRAALVM_HOME/bin/java -version
   - gu install native-image
 
 script:
