add 1K owners and 1K pets records for testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # select database to choose from, it supports H2, MySQL and Oracle (tested with Oracle 19c Enterprise)
 # values either:
 #     h2, mysql, oracle
-database=mysql
+database=oracle
 
 
 # Spring datasource settings - H2 - Uncomment below line if you are using H2
@@ -17,20 +17,20 @@ database=mysql
 
 # Spring datasource settings - MySQL - Uncomment below line if you are using MySQL
 # =====================================================================================
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.username=petclinic
-spring.datasource.password=petclinic
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/petclinic?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.datasource.username=petclinic
+#spring.datasource.password=petclinic
 
 
 # Spring datasource and JPA settings - Oracle - Uncomment below line if you are using Oracle
 # ============================================================================================
-#spring.datasource.url=jdbc:oracle:thin:@//${ORACLE_HOST:localhost}:1521/orcl
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-#spring.datasource.username=system
-#spring.datasource.password=oracle
-#spring.datasource.continue-on-error=true
+spring.datasource.url=jdbc:oracle:thin:@//${ORACLE_HOST:localhost}:1521/orcl
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.datasource.username=system
+spring.datasource.password=oracle
+spring.datasource.continue-on-error=true
 
 
 # Spring datasource settings - Generics
