--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -11,7 +11,7 @@ WORKDIR /home/app/petclinic
 #    && tar -xzf apache-maven-3.6.3-bin.tar.gz \
 #    && export PATH=$PATH:apache-maven-3.6.3/bin \
 #    && ./compile.sh
-RUN ./compile.sh
+RUN ./compile-for-container.sh
 
 FROM alpine:latest
 MAINTAINER Marthen Luther <marthen.luther@oracle.com>
